# zeroclaw

./: Cargo.toml  NOTICE
.github/workflows/: sec-codeql.yml
apps/zeroclaw-app/: .gitignore  CONTRACTS.md  README.md  core-pin.toml  index.html  package-lock.json  package.json  vite.config.ts
apps/zeroclaw-app/scripts/: android-reset-lock.sh  dev-tauri.mjs  tauri-cli.mjs
apps/zeroclaw-app/src/: main.ts  styles.css
apps/zeroclaw-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/zeroclaw-app/src-tauri/capabilities/: default.json
apps/zeroclaw-app/src-tauri/src/: lib.rs  main.rs
crates/zeroclaw-core/: Cargo.toml  README.md
crates/zeroclaw-core/src/: background.rs  control_plane.rs  events.rs  integrations.rs  lib.rs  lifecycle.rs  logs.rs  mcp.rs  pairing_mode.rs  profiles.rs  protocol.rs  runtime.rs  secrets.rs  skills.rs
crates/zeroclaw-core/tests/: compatibility_suite.rs
crates/zeroclaw-core/tests/fixtures/: runtime_event_golden.json
docs/: app-wrapper-build-plan.md
