[package]
name = "zeroclaw-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core runtime contracts for ZeroClaw app shells"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
directories = "6.0"
keyring = "3.6"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.42", default-features = false, features = ["rt", "macros", "sync", "time"] }
toml = "1.0"
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }
zeroclaw = { path = "../.." }

[dev-dependencies]
tempfile = "3.14"
