[package]
name = "zeroclaw-app-tauri"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]

[lib]
name = "zeroclaw_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ed25519-dalek = "2.2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
schemars = "1.2"
tauri = { version = "2.0", features = [] }
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1.42", features = ["sync"] }
toml = "1.0"
zeroclaw = { path = "../../../" }
zeroclaw-core = { path = "../../../crates/zeroclaw-core" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-deep-link = "2.0"
